questions filled out

--- a/index.html
+++ b/index.html
@@ -13,17 +13,48 @@
 
 <body>
 
-    <div class="quiz">
+    <div class="quizGame">
         <div id="header">
             <h1>STAR WARS QUIZ GAME</h1>
         </div>
+        <div id="timer"></div>
         <div id="questionArea">
             <form id="quiz" name="quiz">
                 <p>What is name of the empires new weapon ?</p>
-                <input type="radio" id="mc" name="question2" value=""> death ball
-                <input type="radio" id="mc" name="question2" value="Heartford"> lightsaber
-                <input type="radio" id="mc" name="question2" value="Heartford"> tie fighter
-                <input type="radio" id="mc" name="question2" value="Heartford"> death star
+                <input type="radio" id="mc" name="question1" value="death ball"> death ball;
+                <input type="radio" id="mc" name="question1" value="lightsaber"> lightsaber;
+                <input type="radio" id="mc" name="question1" value="tie fighter"> tie fighter;
+                <input type="radio" id="mc" name="question1" value="death star"> death star;
+
+                <p>What is the name of Han's ship ?</p>
+                <input type="radio" id="mc" name="question2" value="galactica"> galactica;
+                <input type="radio" id="mc" name="question2" value="x-wing"> x-wing;
+                <input type="radio" id="mc" name="question2" value="millenium faclon"> millenium faclon;
+                <input type="radio" id="mc" name="question2" value="enterprise"> enterprise;
+
+                <p>Who is the gold droid ?</p>
+                <input type="radio" id="mc" name="question3" value="R2D2"> R2D2;
+                <input type="radio" id="mc" name="question3" value="RoboCop"> RoboCop;
+                <input type="radio" id="mc" name="question3" value="Data"> Data;
+                <input type="radio" id="mc" name="question3" value="C-3PO"> C-3PO;
+
+                <p>Who played Princess Leia ?</p>
+                <input type="radio" id="mc" name="question4" value="galactica"> Gillian Anderson;
+                <input type="radio" id="mc" name="question4" value="x-wing"> Carrie Fischer;
+                <input type="radio" id="mc" name="question4" value="millenium faclon"> Linda Hamilton;
+                <input type="radio" id="mc" name="question4" value="enterprise"> Sigourney Weaver;
+
+                <p>How many parsecs did Han Solo make the Kessel Run in?</p>
+                <input type="radio" id="mc" name="question2" value="8"> 8;
+                <input type="radio" id="mc" name="question2" value="25"> 25;
+                <input type="radio" id="mc" name="question2" value="12"> 12;
+                <input type="radio" id="mc" name="question2" value="67"> 67;
+
+                <p>Where do Luke and Obi-Wan meet Han and Chewie?</p>
+                <input type="radio" id="mc" name="question2" value="galactica"> Mos Eisley;
+                <input type="radio" id="mc" name="question2" value="x-wing"> Mos Def;
+                <input type="radio" id="mc" name="question2" value="millenium faclon"> Hoth;
+                <input type="radio" id="mc" name="question2" value="enterprise"> Naboo;
 
             </form>
         </div>
