--- a/index.html
+++ b/index.html
@@ -27,30 +27,35 @@
                 <input type="radio" id="mc" name="question1" value="tie fighter"> tie fighter;
                 <input type="radio" id="mc" name="question1" value="death star"> death star;
 
+                <br>
                 <p>What is the name of Han's ship ?</p>
                 <input type="radio" id="mc" name="question2" value="galactica"> galactica;
                 <input type="radio" id="mc" name="question2" value="x-wing"> x-wing;
                 <input type="radio" id="mc" name="question2" value="millenium faclon"> millenium faclon;
                 <input type="radio" id="mc" name="question2" value="enterprise"> enterprise;
 
+                <br>
                 <p>Who is the gold droid ?</p>
                 <input type="radio" id="mc" name="question3" value="R2D2"> R2D2;
                 <input type="radio" id="mc" name="question3" value="RoboCop"> RoboCop;
                 <input type="radio" id="mc" name="question3" value="Data"> Data;
                 <input type="radio" id="mc" name="question3" value="C-3PO"> C-3PO;
 
+                <br>
                 <p>Who played Princess Leia ?</p>
                 <input type="radio" id="mc" name="question4" value="Gillian Anderson"> Gillian Anderson;
                 <input type="radio" id="mc" name="question4" value="Carrie Fischer"> Carrie Fischer;
                 <input type="radio" id="mc" name="question4" value="Linda Hamilton"> Linda Hamilton;
                 <input type="radio" id="mc" name="question4" value="Sigourney Weaver"> Sigourney Weaver;
 
+                <br>
                 <p>How many parsecs did Han Solo make the Kessel Run in?</p>
                 <input type="radio" id="mc" name="question5" value="8"> 8;
                 <input type="radio" id="mc" name="question5" value="25"> 25;
                 <input type="radio" id="mc" name="question5" value="12"> 12;
                 <input type="radio" id="mc" name="question5" value="67"> 67;
 
+                <br>
                 <p>Where do Luke and Obi-Wan meet Han and Chewie?</p>
                 <input type="radio" id="mc" name="question6" value="Mos Eisley"> Mos Eisley;
                 <input type="radio" id="mc" name="question6" value="Mos Def"> Mos Def;
@@ -68,6 +73,7 @@
 
         <p id="message"></p>
         <p id="numberCorrect"></p>
+        <p id="numberIncorrect"></p>
         <img id="picture">
     </div>
 
